--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
         <div class="same-line-panel">
             <img id="image" src=profile.png>
             <div class="center">
-                <h1>YOUR NAME</h1>
+                <h1>Your Name</h1>
+				<p>Kane Hsu<p>
                 <h2>Undergraduate Student</h2>
                 <h3>Majors, Minors</h3>
+				<p>Computer Science<p>
             </div>
 
         </div>
@@ -42,7 +44,8 @@
         <div class="same-line-panel reveal">
             <img id="logo" src=logo.png>
             <div class="panel">
-                <p>Put your Bio Here</p>
+                <p>Born in Washington DC on August 7 1997. I attend the University of Maryland, College Park in
+				pursuit of a bachelors in Computer Science. I enjoy reading books of all genres such as Philosophy and Fantasy.</p>
             </div>
 
         </div>
@@ -52,16 +55,20 @@
             <h1 class="section-header">Projects</h1>
             <div class="row">
                 <div class="column reveal" style="background-color:#A4969B;">
-                    <h2>Project 1 Title</h2>
-                    <p>Description of Project 1...</p>
+                    <h2>Professional Writing Final Project</h2>
+                    <p>This project required me to identify a problem that I could observe in my community and try to brainstorm a solution
+					to the problem. For a school project, it was the longest and most indepth that I have finished to this date. It required multiple
+					interviews and had to be over 25 pages in its printed form</p>
                 </div>
                 <div class="column reveal" style="background-color:#BFB5B9;">
-                    <h2>Project 2 Title</h2>
-                    <p>Description of Project 2...</p>
+                    <h2>Playing in a tournament at the UMD Smash Club</h2>
+                    <p>The first club I had joined was the smash club due to enjoying the game a lot. I had played in a weekly free tournament that is hosted
+					 on campus which was an interesting experience.</p>
                 </div>
                 <div class="column reveal" style="background-color:#D1CACD;">
-                    <h2>Project 3 Title</h2>
-                    <p>Description of Project 3...</p>
+                    <h2>Coding Project in CMSC330 with OCAML</h2>
+                    <p>In CMSC330 I had my first experience with functional programming, which was a completely new paradigm for me to get used to.
+					 Compared to the "normal" programming that I did with Java, C++, and Python, it required a different way to conceptualize problems and solutions.</p>
                 </div>
             </div>
         </div>
@@ -69,14 +76,14 @@
 </body>
 <footer>
     <div class="leftFooter">
-        YOUREMAIL@EMAIL.COM
+        khsu12@terpmail.umd.edu
     </div>
     <div class="rightFooter">
-        <a href="https://www.google.com/" class="fa fa-github" style="font-size:36px"></a>
+        <a href="https://www.github.com/kaneyumin" class="fa fa-github" style="font-size:36px"></a>
 
     </div>
     <div class="rightFooterr">
-        <a href="https://www.google.com/" class="fa fa-linkedin" style="font-size:36px"></a>
+        <a href="N/A" class="fa fa-linkedin" style="font-size:36px"></a>
 
     </div>
 </footer>
