--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="home">
 
         <div class="same-line-panel">
-            <img id="image" src=profile.png>
+            <img id="image" src=1669501394755.webp>
             <div class="center">
                 <h1>Your Name</h1>
 				<p>Kane Hsu<p>
