--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <nav class="same-line">
         <div class="topnav left">
-            <a href="#home">YOUR NAME</a>
+            <a href="#home">Kane Hsu</a>
         </div>
         <div class="topnav right">
             <a href="#home">Home</a>
@@ -26,13 +26,12 @@
     <section id="home">
 
         <div class="same-line-panel">
-            <img id="image" src=1669501394755.webp>
+            <img id="image" src=profile.png>
             <div class="center">
-                <h1>Your Name</h1>
-				<p>Kane Hsu<p>
+                <h1>Kane Hsu</h1>
                 <h2>Undergraduate Student</h2>
                 <h3>Majors, Minors</h3>
-				<p>Computer Science<p>
+				<p>Major: Computer Science, Minor: Math<p>
             </div>
 
         </div>
@@ -70,6 +69,11 @@
                     <p>In CMSC330 I had my first experience with functional programming, which was a completely new paradigm for me to get used to.
 					 Compared to the "normal" programming that I did with Java, C++, and Python, it required a different way to conceptualize problems and solutions.</p>
                 </div>
+                <div class="column reveal" style="background-color:#91818A;">
+                    <h2>Hosting a website in CMSC389T</h2>
+                    <p>A big departure from other coding assignments I had worked on before, this assignment required usage of tools I had not used before such as Docker.
+                        I feel that I learned a lot about how to develop that was independent of the platform that I am working with.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -83,7 +87,7 @@
 
     </div>
     <div class="rightFooterr">
-        <a href="N / A" class="fa fa-linkedin" style="font-size:36px"></a>
+        <a href="https://www.linkedin.com/" class="fa fa-linkedin" style="font-size:36px"></a>
 
     </div>
 </footer>
